--- a/src/Components/FlowContent/NodeComponents/ChatNode/style.module.css
+++ b/src/Components/FlowContent/NodeComponents/ChatNode/style.module.css
@@ -9,9 +9,22 @@
   align-items: center;
   position: relative;
 }
-.testNode:active {
+
+.selectedNode {
+  border: 2px solid #c3c9d5;
+  height: 100px;
+  width: 100px;
+  border-radius: 40px 10px 10px 40px;
+  background-color: #414244;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
   outline: 8px solid #626262;
-}
+} 
+/* .testNode:active {
+  outline: 8px solid #626262;
+} */
 .testNodeIcon {
   color: #fbfcfe;
 }
