--- a/src/Components/FlowContent/NodeComponents/style.module.css
+++ b/src/Components/FlowContent/NodeComponents/style.module.css
@@ -9,11 +9,12 @@
   /* box-shadow: 1px 1px 11px -6px rgba(0, 0, 0, 0.75); */
   -webkit-user-select: none;
   user-select: none;
-  z-index: 100;
+  /* z-index: 100; */
   transition: border ease 0.2s, box-shadow ease 0.2s;
   /* width: 120px;
   height: 220px; */
   /* padding: 1rem; */
+  pointer-events: all;
 }
 
 .node:hover {
@@ -33,10 +34,11 @@
   /* box-shadow: 1px 1px 11px -6px rgba(0, 0, 0, 0.75); */
   -webkit-user-select: none;
   user-select: none;
-  z-index: 100;
+  /* z-index: 100; */
   transition: border ease 0.2s, box-shadow ease 0.2s;
   /* width: 120px;
   height: auto; */
+  pointer-events: all;
   /* padding: 1rem; */
 }
 
@@ -56,6 +58,7 @@
   gap: 12px;
   width: 12px;
   pointer-events: none;
+  
 }
 
 .input {
@@ -137,13 +140,15 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: -55px;
+  left: -100px;
   border-radius: 100%;
   height: 100px;
   width: 100px;
   pointer-events: all;
   cursor: auto;
   z-index: 350;
+  /* border: 2px solid #c3c9d5; */
+  /* display: none; */
 }
 
 .snapping:hover .input {
