--- a/src/Components/FlowContent/EdgeComponents/style.module.css
+++ b/src/Components/FlowContent/EdgeComponents/style.module.css
@@ -8,7 +8,8 @@
   color: rgba(168, 168, 168, 0.8);
   fill: transparent;
   stroke-width: 2;
-
+  z-index: 10;
+  overflow: visible;
 }
 
 .delete {
@@ -40,7 +41,7 @@
 
 .edge {
   pointer-events: all;
-  stroke: #a8a8a8cc;
+  stroke: #c3c9d5;
   stroke-width: 2;
   fill: transparent;
   cursor: pointer;
