--- a/src/Components/BoardComponent/style.module.css
+++ b/src/Components/BoardComponent/style.module.css
@@ -14,6 +14,21 @@
   display: none;
 } */
 
+/* .background {
+  background-size: 20px 20px;
+  background-image: radial-gradient(
+    circle,
+    #a5a5a5 0.1px,
+    rgba(0, 0, 0, 0) 1px
+  );
+  background-color: #2d2e2e;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+} */
+
 .dot-flow__pane {
   /* width: 100%;
   height: 100%; */
@@ -27,7 +42,9 @@
     #a5a5a5 0.1px,
     rgba(0, 0, 0, 0) 1px
   );
+  background-repeat: repeat;
   background-color: #2d2e2e;
+  transform-origin: top left;
   &.draggable {
     cursor: grab;
   }
