--- a/src/Components/FlowContent/EdgeComponents/style.module.css
+++ b/src/Components/FlowContent/EdgeComponents/style.module.css
@@ -1,9 +1,9 @@
 .wrapper {
   position: absolute;
-  top: 0px;
+  /* top: 0px;
   left: 0px;
   width: 100%;
-  height: 100%;
+  height: 100%; */
   pointer-events: none;
   color: rgba(168, 168, 168, 0.8);
   fill: transparent;
