--- a/src/Components/BoardComponent/style.module.css
+++ b/src/Components/BoardComponent/style.module.css
@@ -30,19 +30,8 @@
 } */
 
 .dot-flow__pane {
-  /* width: 100%;
-  height: 100%; */
+
   position: absolute;
-  /* top: 0;
-  left: 0; */
-  /* z-index: 1; */
-  background-size: 20px 20px;
-  background-image: radial-gradient(
-    circle,
-    #a5a5a5 0.1px,
-    rgba(0, 0, 0, 0) 1px
-  );
-  background-repeat: repeat;
   background-color: #2d2e2e;
   transform-origin: top left;
   &.draggable {
@@ -73,6 +62,21 @@
   left: 0;
   overflow: visible;
   
+}
+
+.dot-flow__background {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-size: 20px 20px;
+  background-image: radial-gradient(
+    circle,
+    #a5a5a5 0.1px,
+    rgba(0, 0, 0, 0) 1px
+  );
+  background-repeat: repeat;
 }
 
 /* .board {
