--- a/src/Components/FlowContent/EdgeComponents/style.module.css
+++ b/src/Components/FlowContent/EdgeComponents/style.module.css
@@ -1,8 +1,8 @@
 .wrapper {
   position: absolute;
-  /* top: 0px;
+  top: 0px;
   left: 0px;
-  width: 100%;
+  /* width: 100%;
   height: 100%; */
   pointer-events: none;
   color: rgba(168, 168, 168, 0.8);
@@ -10,12 +10,30 @@
   stroke-width: 2;
   z-index: 10;
   overflow: visible;
+  z-index: -1;
+}
+
+.wrapper:hover {
+  & .edge {
+    pointer-events: all;
+    stroke: #d89b3e;
+    stroke-width: 3;
+    fill: transparent;
+    z-index: 100;
+  }
+  & .delete {
+    cursor: pointer;
+    pointer-events: all;
+    opacity: 1;
+    transition: all ease 0.2s;
+  }
 }
 
 .delete {
-  cursor: pointer;
-  pointer-events: all;
+  /* cursor: pointer; */
+  pointer-events: none;
   transition: all ease 0.2s;
+  opacity: 0;
 }
 
 .deleteHidden {
@@ -47,10 +65,17 @@
   cursor: pointer;
 }
 
+/* .edge:hover {
+  pointer-events: all;
+  stroke: #d89b3e;
+  stroke-width: 3;
+  fill: transparent;
+  z-index: 100;
+} */
+
 .marker {
   color: rgba(168, 168, 168, 0.8);
 }
-
 
 .edgeSelected {
   pointer-events: all;
