--- a/src/Components/FlowContent/NodeComponents/style.module.css
+++ b/src/Components/FlowContent/NodeComponents/style.module.css
@@ -122,7 +122,7 @@
   display: flex;
   align-items: center;
   pointer-events: all;
-  cursor: crosshair;
+  /* cursor: crosshair; */
   opacity: 1;
   pointer-events: all;
   transition: opacity 0.3s ease-in;
@@ -157,7 +157,7 @@
 
 .plusLineHidden {
   opacity: 0;
-  pointer-events: all;
+  pointer-events: none;
 }
 
 .outputPlus {
