--- a/src/Components/ButtonComponents/style.module.css
+++ b/src/Components/ButtonComponents/style.module.css
@@ -36,7 +36,8 @@
 .sidebarContent {
   position: fixed;
   width: 400px;
-  height: 100%;
+  height: 100vh;
+  box-sizing: border-box;
   z-index: 500;
   background-color: #414244;
   top: 0;
@@ -44,6 +45,13 @@
   border: 1px solid #616161;
   transition: all ease-in-out 0.5s;
   overflow: hidden;
+}
+
+.nodeList {
+  overflow-y: auto;
+  max-height: calc(100vh - 160px); 
+  padding-right: 8px; 
+  box-sizing: border-box;
 }
 
 .sidebarContentShow {
@@ -142,6 +150,7 @@
 .nodeIcon {
   color: #c3c9d5;
   margin-right: 10px;
+  font-size: 32px;
 }
 
 .title {
@@ -156,4 +165,25 @@
   font-weight: 400;
   color: #c3c9d5;
   margin-top: 3px;
+}
+
+.nodeList::-webkit-scrollbar {
+  width: 8px;
+}
+
+.nodeList::-webkit-scrollbar-track {
+  /* background: #2e2e30;  */
+  /* background behind scrollbar thumb */
+  border-radius: 4px;
+  /* border: .5px solid #949292;  */
+}
+
+.nodeList::-webkit-scrollbar-thumb {
+  background-color: #6a6a6b; /* color of the scroll thumb */
+  border-radius: 4px;
+  /* border-radius: 10px; */
+}
+
+.nodeList::-webkit-scrollbar-thumb:hover {
+  background-color: #bb9086; /* thumb on hover */
 }
