--- a/src/Components/FlowContent/NodeComponents/style.module.css
+++ b/src/Components/FlowContent/NodeComponents/style.module.css
@@ -1,6 +1,6 @@
 .node {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   position: absolute;
   cursor: pointer;
   border-radius: 6px;
@@ -8,6 +8,7 @@
   user-select: none;
   transition: border ease 0.2s, box-shadow ease 0.2s;
   pointer-events: all;
+  z-index: 350;
 }
 
 .node:hover {
@@ -16,7 +17,7 @@
 
 .nodeSelected {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   position: absolute;
   cursor: pointer;
   border-radius: 6px;
@@ -24,11 +25,12 @@
   user-select: none;
   transition: border ease 0.2s, box-shadow ease 0.2s;
   pointer-events: all;
+  z-index: 350;
 }
 
-.nodeSelected:hover {
+/* .nodeSelected:hover {
   box-shadow: 2px 2px 12px -6px rgba(0, 0, 0, 0.75);
-}
+} */
 
 .inputsWrapper {
   position: absolute;
@@ -42,7 +44,6 @@
   gap: 12px;
   width: 12px;
   pointer-events: none;
-  
 }
 
 .input {
@@ -98,7 +99,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 
 .outputDownVertex {
@@ -111,7 +111,7 @@
 }
 
 .downOutputLine {
-  width: 2.5px ;
+  width: 2.5px;
   height: 40px;
   background-color: #c3c9d5;
   cursor: crosshair;
@@ -122,7 +122,7 @@
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
-  
+
   align-items: center;
   pointer-events: all;
   /* cursor: crosshair; */
@@ -136,10 +136,11 @@
 }
 
 .outputsWrapper {
-  position: absolute;
+  /* position: absolute;
   top: 0px;
   right: -35px;
-  height: 100%;
+  height: 100%; */
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -147,6 +148,7 @@
   gap: 4px;
   width: 12px;
   pointer-events: none;
+  margin-left: 23px;
   /* background-color: wheat; */
   /* border: 1px solid white; */
 }
